execução automatica do jupyter

--- a/jupyter_notebook/graficos.ipynb
+++ b/jupyter_notebook/graficos.ipynb
@@ -15,7 +15,7 @@
       "id": "9fb81e98",
       "metadata": {},
       "source": [
-        "O código abaixo constroi os gráficos com base no objeto *data*."
+        "O código abaixo constrói os gráficos com base no objeto *data*."
       ]
     },
     {
